# hello-world

./: .clang-format  .gitignore  CMakeLists.txt  README.md
CMake/: compiler_warnings.cmake
Source/: CMakeLists.txt  main.cpp
Source/HelloWorld/: hello.cpp  hello.hpp
Tests/: CMakeLists.txt  helloTest.cpp
